--- a/springtest/pom.xml
+++ b/springtest/pom.xml
@@ -25,6 +25,25 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	    <groupId>io.apiman</groupId>
+	    <artifactId>apiman-common-logging-core</artifactId>
+	    <version>1.5.1.Final</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>ant</groupId>
+	    <artifactId>ant-apache-log4j</artifactId>
+	    <version>1.6.5</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring</artifactId>
+	    <version>2.0</version>
+	</dependency>
+	
+	
   </dependencies>
 
   <build>
